package LEBOCQTitouan.edu.model.commands;

public interface InterMediatorCommand {
    void execute();
    void updateSimulationMetrics();
}
