package LEBOCQTitouan.edu.model.commands.planet.factory;

import LEBOCQTitouan.edu.model.entities.planet.Planet;
import LEBOCQTitouan.edu.model.geography.RobotMapper;

public class PlanetCommandFactory {
    private Planet planet;
    private RobotMapper robotMapper;
}
