package LEBOCQTitouan.edu.model.commands.waterpipe.factory;

import LEBOCQTitouan.edu.model.entities.planet.Planet;
import LEBOCQTitouan.edu.model.entities.waterpipe.WaterpipeHandler;

public class WaterpipeCommandFactory {
    private Planet planet;
    private WaterpipeHandler waterpipeHandler;
}
