@startuml
'https://plantuml.com/class-diagram

class InterMediator {
    computeCommands()
}
class InterMediatorCommand {
    +execute()
}

InterMediator o--> Planet
InterMediator o--> "0..*" Robot : robots
InterMediator o--> ShockWave

InterMediator *-> "0..*" InterMediatorCommand : commands

RobotCommandFactory ..> InterMediatorCommand
ShockWaveCommandFactory ..> InterMediatorCommand
PlanetCommandFactory ..> InterMediatorCommand
WaterpipeCommandFactory ..> InterMediatorCommand

class RobotCommandFactory {}
class WaterpipeCommandFactory {}
class ShockWaveCommandFactory {}
class PlanetCommandFactory {}

class Planet {}
class Robot {}
class ShockWave {}

Planet o--> PlanetCommandFactory
Robot o--> RobotCommandFactory
Robot o--> WaterpipeCommandFactory
ShockWave o--> ShockWaveCommandFactory

@enduml